--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,10 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+    {{ knp_menu_render('main') }}
+    {% block body %}{% endblock %}
+        {% block javascripts %}
+
+        {% endblock %}
     </body>
 </html>
