--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,8 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
-    {% block body %}    {{ knp_menu_render('main') }}
+    {% block body %}    {{ knp_menu_render('AppBundle:Builder:mainMenu') }}
+
     {% endblock %}
         {% block javascripts %}
 
